[gd_scene load_steps=7 format=3 uid="uid://cvfk1nlqkb6sw"]

[ext_resource type="Script" uid="uid://de81q4o2s5ysb" path="res://scenes/scene_root.gd" id="1_3v20e"]
[ext_resource type="Shader" uid="uid://bmke2ja1th6m7" path="res://addons/smooth_pixel_subviewport_container/smooth_pixel_subviewport_container.gdshader" id="2_tinwa"]
[ext_resource type="Script" uid="uid://cmidb70k32kfd" path="res://node_types/texture_rect_sub_viewport.gd" id="3_tinwa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tinwa"]
shader = ExtResource("2_tinwa")
shader_parameter/vertex_offset = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_3v20e"]
resource_name = "out"
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3p0gp"]
_data = {
&"out": SubResource("Animation_3v20e")
}

[node name="SceneRoot" type="Node"]
script = ExtResource("1_3v20e")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0431373, 0.0784314, 0.0705882, 1)

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="SmoothPixelSubViewportContainer" type="Control" parent="AspectRatioContainer"]
texture_filter = 2
texture_repeat = 1
material = SubResource("ShaderMaterial_tinwa")
layout_mode = 2
focus_mode = 1
script = ExtResource("3_tinwa")
metadata/_custom_type_script = "uid://cmidb70k32kfd"

[node name="PixelSubViewport" type="SubViewport" parent="AspectRatioContainer/SmoothPixelSubViewportContainer"]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
physics_object_picking = true
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="HighRes" type="SubViewportContainer" parent="AspectRatioContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 2
stretch = true

[node name="HighResSubViewport" type="SubViewport" parent="AspectRatioContainer/HighRes"]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(960, 539)
size_2d_override = Vector2i(960, 540)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="SceneTransition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3p0gp")
}

[connection signal="size_changed" from="AspectRatioContainer/HighRes/HighResSubViewport" to="." method="_on_high_res_sub_viewport_size_changed"]
